--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <scrip source="main"></scrip>
+        <script src="main.js" ></script></scrip>
     </head>
     <body></body>
 </html>
